started the input form

--- a/qwinto/website_score_form/index.html
+++ b/qwinto/website_score_form/index.html
@@ -11,15 +11,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="sketch.js"></script>
-    <script src="scoreform.js"></script>
+    <script src="ScoreForm.js"></script>
     <script src="cell.js"></script>
+    <script src="inputButton.js"></script>
     <script type="text/javascript" src="http://livejs.com/live.js"></script>
 
     <link rel="stylesheet" type="text/css" href="mystyle.css">
 
   </head>
   <body>
-    
+
 
   </body>
 </html>
