--- a/TooGoodToLetGo/index.html
+++ b/TooGoodToLetGo/index.html
@@ -1,107 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barcode Scanner</title>
-    <script src="https://cdn.jsdelivr.net/npm/quagga@0.12.1/dist/quagga.min.js"></script>
-    <style>
-        #scanner {
-            display: none;
-            width: 500px;
-            height: 300px;
-            position: relative;
-            margin-bottom: 20px;
-        }
-        #scanner .overlay {
-            position: absolute;
-            top: 50%;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background-color: red;
-            transform: translateY(-50%);
-        }
-    </style>
+<title>Page Title</title>
 </head>
 <body>
-    <h1>Scan Product Barcode</h1>
-    <button id="startScanner">Scan new product</button>
-    <div id="scanner">
-        <div class="overlay"></div>
-    </div>
-    <form id="productForm">
-        <label for="barcode">Barcode:</label>
-        <input type="text" id="barcode" name="barcode" readonly><br><br>
-        <label for="expiration">Expiration Date:</label>
-        <input type="date" id="expiration" name="expiration"><br><br>
-        <button type="submit">Save Product</button>
-    </form>
 
-    <script>
-        // Initialize QuaggaJS for barcode scanning
-        function startScanner() {
-            Quagga.init({
-                inputStream: {
-                    name: "Live",
-                    type: "LiveStream",
-                    target: document.querySelector('#scanner'),
-                    constraints: {
-                        width: 500,
-                        height: 300,
-                        facingMode: "environment" // Use the rear camera
-                    }
-                },
-                decoder: {
-                    readers: ["ean_reader"] // Add reader for EAN-13
-                },
-                locate: true // Try to locate the barcode in the image
-            }, function (err) {
-                if (err) {
-                    console.log(err);
-                    return;
-                }
-                console.log("Initialization finished. Ready to start");
-                Quagga.start();
-                document.getElementById('scanner').style.display = 'block';
-            });
-        }
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
-        // Process the barcode after it is detected
-        Quagga.onDetected(function (result) {
-            const code = result.codeResult.code;
-            document.getElementById('barcode').value = code;
-            Quagga.stop();
-            document.getElementById('scanner').style.display = 'none';
-        });
-
-        // Handle form submission
-        document.getElementById('productForm').addEventListener('submit', function (event) {
-            event.preventDefault();
-
-            const barcode = document.getElementById('barcode').value;
-            const expiration = document.getElementById('expiration').value;
-
-            fetch('/api/products', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ barcode, expiration })
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert('Product saved successfully!');
-                document.getElementById('productForm').reset();
-                document.getElementById('barcode').value = '';
-            })
-            .catch(error => console.error('Error:', error));
-        });
-
-        // Start the scanner when the button is clicked
-        document.getElementById('startScanner').addEventListener('click', function () {
-            startScanner();
-        });
-    </script>
 </body>
 </html>
+
